[package]
name = "quickincidenttriagetoolkit"
version = "1.0.0"
description = "A sleek, offline desktop toolkit for rapid system triage - built with Rust, Tauri, and React. Visualize CPU, memory, disk, network activity and processes in real-time. Supports exporting data to JSON."
authors = ["KenB773"]
license = "MIT"
repository = "https://github.com/KenB773/QuickIncidentTriageToolkit"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[features]
custom-protocol = []

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1.5.6", features = ["shell-open", "dialog-all", "fs-write-file"] }
sysinfo = { version = "0.34.2", features = ["serde"] }
